feat: 添加从 query 拿参数
